tests/paczka1/fuzzy1/40151662.err
Error in line 6: zTU9zcE0x S419 31,5
Error in line 18: A192 A18 81,3
Error in line 34: 6x98FOvbn A18 44,7
Error in line 31: zbY S140 41,6
